Upgrade bundled GD library to 2.0.23. Fixed bug #28175 (build problem for people using FreeType 2.1.0-2.1.2).

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@158258 c90b9560-bf6c-de11-be94-00142212c4b1